a complete solution using socket for comm between frontend and backend

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,13 +1,48 @@
 
-
 CC=gcc
+CFLAGS=-g -std=c11 -Wall -Werror
 CCTOOLS_INCLUDE=/usr/include/cctools-7.0.18/cctools
 CCTOOLS_LIB=/usr/lib/cctools-7.0.18
+LIB=-lwork_queue -ldttools -lm -lz
+
+CUTEST_INCLUDE=../cutest-1.5
+
+.PHONY: all
+all: blast_workqueue blast_workqueue-backend
+
+.PHONY: release
+release: CFLAGS=-O3 -std=c11 -Wall -Werror -Wextra
+release: blast_workqueue blast_workqueue-backend
+
+.PHONY: simple
+simple: blast_wq_simple
 
 blast_workqueue-simple: blast_wq_simple.c
-	$(CC) $< -g -o $@ -I$(CCTOOLS_INCLUDE) -L$(CCTOOLS_LIB) -lwork_queue -ldttools -lm -lz
+	$(CC) $^ $(CFLAGS) -o $@ -I$(CCTOOLS_INCLUDE) -L$(CCTOOLS_LIB) $(LIB) 
+
+blast_workqueue: blast_workqueue.c
+	$(CC) $^ $(CFLAGS) -o $@ -I$(CCTOOLS_INCLUDE) -L$(CCTOOLS_LIB) $(LIB)
+
+blast_workqueue-backend: blast_workqueue_backend.o socket_comm.o
+	$(CC) $^ $(CFLAGS) -o $@ -I$(CCTOOLS_INCLUDE) -L$(CCTOOLS_LIB) $(LIB)
+
+blast_workqueue_backend.o: blast_workqueue_backend.c
+	$(CC) $< $(CFLAGS) -c -o $@ -I$(CCTOOLS_INCLUDE) -L$(CCTOOLS_LIB) $(LIB)
+
+socket_comm.o: socket_comm.c
+	$(CC) $< $(CFLAGS) -c -o $@ -I$(CCTOOLS_INCLUDE) -L$(CCTOOLS_LIB) $(LIB)
+
+.PHONY: test
+test: CFLAGS=-g -std=c11 -Wall -Werror -Wextra -DUNIT_TEST -I$(CUTEST_INCLUDE)
+test: test.o CuTest.o socket_comm.o
+	$(CC) $^ $(CFLAGS) -o $@ -I$(CCTOOLS_INCLUDE) -L$(CCTOOLS_LIB) $(LIB)
+
+test.o: test.c
+	$(CC) $< $(CFLAGS) -c -o $@
+CuTest.o: $(CUTEST_INCLUDE)/CuTest.c
+	$(CC) $< $(CFLAGS) -c -o $@
 
 .PHONY: clean
 clean:
-	rm blast_workqueue-simple
+	rm -f blast_workqueue-simple blast_workqueue blast_workqueue-backend test *.o
 
