Tests work, and pass. No changes to actual code, as far as I remember.

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,8 +3,8 @@ CC=gcc
 CFLAGS=-g -std=c11 -Wall -Werror
 #CCTOOLS_INCLUDE=/usr/include/cctools-7.0.18/cctools/
 #CCTOOLS_LIB=/usr/lib/cctools-7.0.18/
-CCTOOLS_INCLUDE=$(HOME)/cctools/include/cctools
-CCTOOLS_LIB=$(HOME)/cctools/lib
+CCTOOLS_INCLUDE=/opt/cctools-7.0.19-x86_64-centos7/include/cctools
+CCTOOLS_LIB=/opt/cctools-7.0.19-x86_64-centos7/lib
 LIB=-lwork_queue -ldttools -lm -lz
 
 CUTEST_INCLUDE=../cutest-1.5
@@ -44,7 +44,7 @@ socket_comm.o: socket_comm.c
 
 .PHONY: test
 test: CFLAGS=-g -std=c11 -Wall -Werror -Wextra -DUNIT_TEST -I$(CUTEST_INCLUDE)
-test: test.o CuTest.o socket_comm.o
+test: test.o CuTest.o socket_comm.o blast_workqueue.o
 	$(CC) $^ $(CFLAGS) -o $@ -I$(CCTOOLS_INCLUDE) -L$(CCTOOLS_LIB) $(LIB)
 
 test.o: test.c
