--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -40,7 +40,7 @@ RUN git clone https://github.com/zhxu73/sequenceserver-scale.git \
     # Install the dependencies of SequenceServer
     && bundle install --path vendor/bundle --without development test \
     # Install BLAST
-    && wget ftp://ftp.ncbi.nlm.nih.gov/blast/executables/blast+/LATEST/ncbi-blast-2.9.0+-x64-linux.tar.gz \
+    && wget https://github.com/zhxu73/sequenceserver-scale-docker/releases/download/ncbi-blast-2.9.0%2B/ncbi-blast-2.9.0+-x64-linux.tar.gz \
     && tar -xvf ncbi-blast-2.9.0+-x64-linux.tar.gz \
     # Install cctools (WorkQueue)
     && wget http://ccl.cse.nd.edu/software/files/cctools-7.0.21-source.tar.gz \
