alow SEQSERVER_DB_PATH as an option

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -132,7 +132,10 @@ RUN cp from_build_image/bin/* /usr/bin \
     && mkdir -p /home/$SEQSERVER_USER/.irods \
     && cp from_build_image/irods_environment.json /home/$SEQSERVER_USER/.irods/irods_environment.json \
     && echo ${WORKQUEUE_PASSWORD} > $SEQSERVER_BASE_PATH/wq_password.txt \
-    && chown -R ${SEQSERVER_USER}:${SEQSERVER_GROUP} ${SEQSERVER_BASE_PATH}
+    && chown -R ${SEQSERVER_USER}:${SEQSERVER_GROUP} ${SEQSERVER_BASE_PATH} \
+    # Allow folder creation in /home
+    && chown :${SEQSERVER_GROUP} /home \
+    && chmod g+rwx /home
 
 USER seqserver
 WORKDIR ${SEQSERVER_APP_PATH}
